--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
 <title>YouTube видео плеер</title>
- <link rel="stylesheet" href="main.css"></>
+ <link rel="stylesheet" href="style.css"></>
 </head>
 <body>
 <div class="container">
